# aoc-2023

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  HACKING.md  README.md  go.mod  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.cpp.json  devcontainer.json
cmake/: dependencies.cmake  dev-mode.cmake  install-rules.cmake  variables.cmake
source/cpp-template/: 1.cpp
source/day1/: 1.cpp  2.cpp  CMakeLists.txt
source/day10/1/: main.go
source/day10/2/: main.go
source/day10/parse/: parse.go
source/day11/1/: main.go
source/day11/2/: main.go
source/day12/1/: main.go
source/day12/2/: main.go
source/day12/parse/: parse.go
source/day13/1/: main.go
source/day13/2/: main.go
source/day13/parse/: parse.go
source/day14/1/: main.go
source/day14/2/: main.go
source/day14/parse/: parse.go
source/day15/1/: main.go
source/day15/2/: main.go
source/day15/parse/: parse.go
source/day16/: test1.txt
source/day16/1/: main.go
source/day16/2/: main.go
source/day16/parse/: parse.go
source/day17/1/: main.go
source/day17/2/: main.go
source/day17/parse/: parse.go
source/day17/priorityqueue/: heap.go  priorityqueue.go
source/day2/: 1.cpp  2.cpp  CMakeLists.txt  parse.hpp
source/day3/: 1.cpp  2.cpp  CMakeLists.txt  parse.hpp
source/day4/: 1.cpp  2.cpp  CMakeLists.txt  parse.hpp
source/day5/1/: main.go
source/day5/2/: main.go
source/day5/mapping/: mapping.go
source/day6/1/: main.go
source/day6/2/: main.go
source/day7/1/: main.go
source/day7/2/: main.go
source/day7/parse/: parse.go
source/day8/1/: main.go
source/day8/2/: main.go
source/day8/parse/: parse.go
source/day9/1/: main.go
source/day9/2/: main.go
source/day9/parse/: parse.go
source/go-template/1/: main.go
source/go-template/2/: main.go
source/go-template/parse/: parse.go
source/template/: 2.cpp  CMakeLists.txt
test/: CMakeLists.txt
test/source/: aoc-2023_test.cpp
